--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -25,7 +25,8 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v5
         with:
+          path: ./web
           context: .
-          file: ./web/Dockerfile
+          file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/clockbox:latest
