--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -25,8 +25,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v5
         with:
-          path: ./web
-          context: .
+          context: ./web
           file: ./Dockerfile
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/clockbox:latest
