--- a/.github/workflows/web.yaml
+++ b/.github/workflows/web.yaml
@@ -7,7 +7,9 @@ on:
     tags:
       - "v*"
     paths:
-      - ./web/**
+      - ./web/Dockerfile
+      - ./web/*.mjs
+      - ./web/*.json
 
 jobs:
   build:
