--- a/.github/workflows/web.yaml
+++ b/.github/workflows/web.yaml
@@ -7,9 +7,9 @@ on:
     tags:
       - "v*"
     paths:
-      - ./web/Dockerfile
-      - ./web/*.mjs
-      - ./web/*.json
+      - "./web/Dockerfile"
+      - "./web/*.mjs"
+      - "./web/*.json"
 
 jobs:
   build:
