--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -6,8 +6,8 @@ on:
       - "master"
     tags:
       - "v*"
-    paths:
-      - "./web/**"
+    # paths:
+    #   - "./web/**"
 
 jobs:
   build:
