--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -4,10 +4,8 @@ on:
   push:
     branches:
       - "master"
-    tags:
-      - "v*"
-    # paths:
-    #   - "./web/**"
+    paths:
+      - "./web/**"
 
 jobs:
   build:
@@ -32,11 +30,6 @@ jobs:
           key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-buildx-
-
-      - name: Extract version
-        id: extract_version
-        if: startsWith(github.ref, 'refs/tags/')
-        run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
       
       - name: Build and push
         uses: docker/build-push-action@v5
