--- a/.github/workflows/azure.yaml
+++ b/.github/workflows/azure.yaml
@@ -1,25 +1,23 @@
-name: Run Azure Login with OpenID Connect and PowerShell
+name: Run Azure Login with OpenID Connect
 on: [push]
 
 permissions:
-  id-token: write
-  contents: read
+      id-token: write
+      contents: read
       
 jobs: 
-  Windows-latest:
-    runs-on: windows-latest
+  build-and-deploy:
+    runs-on: ubuntu-latest
     steps:
-      - name: OIDC Login to Azure Public Cloud with AzPowershell (enableAzPSSession true)
-        uses: azure/login@v1
-        with:
+    - name: 'Az CLI login'
+      uses: azure/login@v1
+      with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }} 
-          enable-AzPSSession: true
-
-      - name: 'Get resource group with PowerShell action'
-        uses: azure/powershell@v1
-        with:
-          inlineScript: |
-            Get-AzResourceGroup
-          azPSVersion: "latest"
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+  
+    - name: 'Run Azure CLI commands'
+      run: |
+          az account show
+          az group list
+          pwd
