--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -3,7 +3,7 @@ name: terraform
 on:
   pull_request:
     branches:
-      - main
+      - master
     paths:
       - 'terraform/**.tf'
       - '!**.md'
