--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -5,8 +5,7 @@ on:
     branches:
       - master
     paths:
-      - 'terraform/**.tf'
-      - '!**.md'
+      - "terraform/**"
 
 permissions:
   id-token: write
